examples/test/testpolicy8830.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8830
  namespace: namespace197
spec:
  podSelector:
    matchLabels:
      key37: value31
      key25: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value40
          key41: value11
          key25: value1
      podSelector:
        matchLabels:
          key22: value29
          key45: value44
          key23: value19
